--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ ul {
   list-style: none;
 }
 
-body{
-  margin: 0 auto; 
+body {
+  margin: 0 auto;
 }
 
 img {
@@ -44,7 +44,6 @@ img {
   margin: 1rem;
   color: #e27d60;
   display: flex;
-  flex-shrink: 1; 
   justify-content: center;
   text-shadow: #41b3a3 5px 7px 8px;
 }
@@ -54,75 +53,71 @@ h1 {
   font-weight: 800;
 }
 
-#container{
-    display: flex;
-    flex-direction: column;
-    
+#container {
+  display: flex;
+  flex-direction: column;
 }
 
-#jokebox{
-    font-size: 1.2rem; 
-    margin: 140px auto 20px auto; 
-    width: 30rem;
-    height: 15rem;
-    
-    color: #003D4D;
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    text-justify: auto;
-    padding: 1rem; 
+#jokebox {
+  font-size: 1.2rem;
+  margin: 140px auto 20px auto;
+  width: 70vw;
+  height: 40vh;
+  color: #003d4d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-justify: auto;
+  padding: 1rem;
 }
 
-
-
-.button-container{
-    display: flex;
-    padding: 1rem;
-    justify-content: center; 
+.button-container {
+  display: flex;
+  padding: 1rem;
+  justify-content: center;
 }
 
-
-button{
-    cursor: pointer;
-    font-size: 1rem;
-    padding: .5rem 1rem;
-    background-color: #0E7080;
-    color:  white; 
-    border: 2px solid #0E7080;
-    border-radius: 4px;
-    outline: 0;
-    transition: 0.5s; 
+button {
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #0e7080;
+  color: white;
+  border: 2px solid #0e7080;
+  border-radius: 4px;
+  outline: 0;
+  transition: 0.5s;
 }
 
-button:hover{
-    /* background-color: #774152;
-    border: 2px solid #774152; */
-    font-size: 1.3rem; 
-    background-color: #e27d60;
-    border: 2px solid #e27d60; 
-    color:white;
-
-    
+button:hover {
+  /* background-color: #774152;
+      border: 2px solid #774152; */
+  font-size: 1.3rem;
+  background-color: #e27d60;
+  border: 2px solid #e27d60;
+  color: white;
 }
 
-button:click{
-    border: 2px solid black; 
+button:click {
+  border: 2px solid black;
 }
 
-img{
-    align-self: center; 
-    width: 400px;
-    position: absolute;
-    z-index: -1;
-    opacity: 0.35;
+img {
+  margin-top: 2vw; 
+  align-self: center;
+  width: 430px;
+  position: absolute;
+  z-index: -1;
+  opacity: 0.35;
 }
 
-@media only screen and (max-width: 800px){
-  img{
-    width: 440px;  
+@media only screen and (min-width: 800px) {
+  img {
+    width: 460px;
+  }
+
+  #jokebox {
+    width: 60vw;
   }
 }
-
-
